admission/ValidatingAdmissionPolicy/policies/fsgroup/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: violating-fsgroup-pod
  annotations:
    kubeapt.io/uuid: "c39ebbef-d72a-4b00-aebf-1ece6992ee7c"
spec:
  securityContext:
    fsGroup: 0
  containers:
  - name: main
    image: busybox:1.36
    command: ["sh", "-c", "sleep 3600"]
